samples/_failures_safe/1761392437_e3d67a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18aa60df.c: In function ‘main’:
./samples/SAFE/__tmp_18aa60df.c:159:5: error: expected expression at end of input
  159 |     graph_add_node(&g,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_18aa60df.c:159:5: error: expected declaration or statement at end of input
